lyricue (1:3.4.15-1) quantal; urgency=low

    * Add option to ignore mouse clicks on display screen

 -- Chris Debenham <chris@adebenham.com>  Tue, 12 February 2013 17:30:00 +1000

lyricue (1:3.4.14-1) quantal; urgency=low

    * Handle if font colours were set to blank
    * Fix icon location for launcher files
    * Add ability to save local copy of pages

 -- Chris Debenham <chris@adebenham.com>  Tue, 12 February 2013 17:30:00 +1000

lyricue (1:3.4.13-1) quantal; urgency=low

    * Add right-click popup for backgrounds to change font colours

 -- Chris Debenham <chris@adebenham.com>  Wed, 6 February 2013 17:30:00 +1000

lyricue (1:3.4.12-2) quantal; urgency=low

    * Re-upload for failed build
    * Improve handling of previews for 16:9 displays
    * Improve presentation import quality

 -- Chris Debenham <chris@adebenham.com>  Fri, 18 January 2013 17:30:00 +1000

lyricue (1:3.4.12-1) quantal; urgency=low

    * Improve handling of previews for 16:9 displays
    * Improve presentation import quality

 -- Chris Debenham <chris@adebenham.com>  Fri, 18 January 2013 17:30:00 +1000

lyricue (1:3.4.11-1) quantal; urgency=low

    * Rebuild for Ubuntu 12.10 release
    * Fix SQL query for creating mysql user

 -- Chris Debenham <chris@adebenham.com>  Fri, 19 October 2012 17:30:00 +1000

lyricue (1:3.4.10-1) precise; urgency=low

    * Fix text remaining on screen after slide+rotate transition
    * Handle database disconnects better (try to reconnect)
    * Fix error message if config file incorrect

 -- Chris Debenham <chris@adebenham.com>  Mon, 9 July 2012 17:30:00 +1000

lyricue (1:3.4.9-1) precise; urgency=low

    * Fix remote JSON query if no return values found

 -- Chris Debenham <chris@adebenham.com>  Wed, 2 May 2012 17:30:00 +1000

lyricue (1:3.4.8-1) precise; urgency=low

    * Re-enable translations (were lost due to intltool not handling .ui)

 -- Chris Debenham <chris@adebenham.com>  Wed, 18 Apr 2012 17:30:00 +1000
