@@ -1,6 +1,7 @@
 lyricue (1:3.4.15-1) quantal; urgency=low
 
     * Add option to ignore mouse clicks on display screen
+    * Fix preset copyright field handling
 
  -- Chris Debenham <chris@adebenham.com>  Tue, 12 February 2013 17:30:00 +1000
 
